--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ springdoc:
   cache.disabled: true
 
 toss:
-  secret-key: test_gsk_docs_OaPz8L5KdmQXkzRz3y47BMw6
+  secret-key: ${TOSS_SECRET_KEY}
 
 logging:
   level:
